--- a/archives/zhihu-questions/2024-02-29.md
+++ b/archives/zhihu-questions/2024-02-29.md
@@ -1,20 +1,23 @@
 # 2024-02-29
 
-共 59 条
+共 61 条
 
 <!-- BEGIN ZHIHUQUESTIONS -->
-<!-- 最后更新时间 Thu Feb 29 2024 02:00:46 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Feb 29 2024 03:00:42 GMT+0800 (China Standard Time) -->
 1. [住建部发文，要求「各城市要做好今明两年住房发展计划，防止市场大起大落」，具有哪些意义？](https://www.zhihu.com/question/646139130)
 1. [韩国政府最后通牒时限将至，吊销医师执照对罢工者意味着什么？超万人辞职，韩国医生罢工为何愈演愈烈？](https://www.zhihu.com/question/646230849)
 1. [「飞行汽车」首飞成功，深圳到珠海所需时间缩短至 20 分钟，如何看待新出行方式的出现？对此有哪些期待？](https://www.zhihu.com/question/646238164)
 1. [报道称苹果决定取消电动车项目，李想表示「绝对正确」，雷军称「非常震惊」，哪些信息值得关注？](https://www.zhihu.com/question/646219752)
 1. [李亚鹏直播痛哭，自称连吃一个星期的外卖，曾因「欠债 4000 万」被限制高消费，哪些信息值得关注？](https://www.zhihu.com/question/646232545)
 1. [「重庆姐弟坠楼案」母亲宣布将直播带货，自曝很多人劝阻，称想让父母过上更好的生活，如何看待此事？](https://www.zhihu.com/question/646330000)
+1. [专家预测全球楼市拐点已至，该如何应对上涨的房价，现在买房是否合适？](https://www.zhihu.com/question/646299904)
 1. [如果人的脚进化成蹄子会怎么样？](https://www.zhihu.com/question/645292302)
 1. [为什么有「闰年」，「闰年」会有什么讲究吗？](https://www.zhihu.com/question/646353301)
+1. [中国商飞ARJ21和C919飞机开启东南亚演示飞行，刚从新加坡回来又去东南亚演示飞行，传递了啥信息？](https://www.zhihu.com/question/646048123)
+1. [比特币站上 6 万美元关口，为 2021 年 11 月以来最高水平，哪些信息值得关注？](https://www.zhihu.com/question/646274358)
+1. [请问如果当时去蜂巢岛的是赤犬会发生什么？](https://www.zhihu.com/question/644997356)
 1. [家庭只能有一台电脑，该选择台式还是笔记本好？](https://www.zhihu.com/question/645852050)
 1. [有哪些护肤好习惯能让普通人低成本变美？](https://www.zhihu.com/question/645051259)
-1. [比特币站上 6 万美元关口，为 2021 年 11 月以来最高水平，哪些信息值得关注？](https://www.zhihu.com/question/646274358)
 1. [俄防长「乌军阵亡超 44.4 万，俄军正推进」，哪些信息值得关注？](https://www.zhihu.com/question/646289525)
 1. [贵州省成立调查组，将对「女企业家讨工程款被批捕」一案进行全面审查，该事件或将如何发展？](https://www.zhihu.com/question/646283321)
 1. [为什么很多人把“荨”读成“xún”，而不会把“驼”读成“tā”？](https://www.zhihu.com/question/645252501)
@@ -40,9 +43,6 @@
 1. [如何评价《海贼王》漫画第 1109 话情报？](https://www.zhihu.com/question/646216224)
 1. [作为女性，你想拥有一个怎样的人生呢？](https://www.zhihu.com/question/645627469)
 1. [健身分时间段吗？早上锻炼和下午锻炼效果有区别吗？](https://www.zhihu.com/question/644182588)
-1. [专家预测全球楼市拐点已至，该如何应对上涨的房价，现在买房是否合适？](https://www.zhihu.com/question/646299904)
-1. [对于初学者来说，力量训练一周几次最合适？](https://www.zhihu.com/question/646108285)
-1. [你会让孩子学着做家务吗？](https://www.zhihu.com/question/641252362)
 1. [全球只有不到 5% 的罕见病有药可医，人类为什么要投入重金研究应对？「孤儿药」公共价值何在？](https://www.zhihu.com/question/646080781)
 1. [如果一份工作被领导「针对」，该不该辞职?](https://www.zhihu.com/question/645995857)
 1. [碧桂园公告「Ever Credit 向法院提出清盘呈请，公司极力反对」，哪些信息值得关注？](https://www.zhihu.com/question/646208359)
@@ -54,6 +54,8 @@
 1. [有哪些二刷《飞驰人生 2》才看懂的细节？](https://www.zhihu.com/question/645131298)
 1. [中国空间站进入常态化运营模式，意味着什么？有哪些任务值得关注？](https://www.zhihu.com/question/646205015)
 1. [宁吉喆称「落实带薪休假制度有利于法定假期消费热潮常态化」，哪些信息值得关注？](https://www.zhihu.com/question/646236321)
+1. [对于初学者来说，力量训练一周几次最合适？](https://www.zhihu.com/question/646108285)
+1. [你会让孩子学着做家务吗？](https://www.zhihu.com/question/641252362)
 1. [哪些事情让你觉得职场就是个巨大的「草台班子」？](https://www.zhihu.com/question/644707360)
 1. [为什么「心灵鸡汤」没有用？](https://www.zhihu.com/question/645629656)
 1. [为什么新录用乡镇公务员有五年服务期？](https://www.zhihu.com/question/645307175)
